unpackaged/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>Stores internal employee records including personal data, compensation, department assignment, and reporting hierarchy. Single source of truth for HR and Finance.</description>
    <label>Employee</label>
    <nameField>
        <displayFormat>EMP-{00000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>