unpackaged/main/default/objects/Employee__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>The employee's date of birth.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>