unpackaged/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The department to which the employee belongs.</description>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>