unpackaged/main/default/objects/Employee__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Employee's current annual salary.</description>
    <label>Salary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>