unpackaged/main/default/objects/Employee__c/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>The employee's Social Security Number, stored encrypted and masked to show only the last four digits.</description>
    <label>Social Security Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>